--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
             <label for="full-name">Full Name</label>
             <input type="text" id="full-name" placeholder="Enter Your Name|">
 
-            <label for="email">password</label>
-            <input type="password" id="email" placeholder="Enter password|">
+            <label for="pass">password</label>
+            <input type="password" id="pass" placeholder="Enter password|">
+
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter email|">
 
             <label for="bdate">Birth of Date</label>
             <input type="date" id="bdate" >
@@ -83,28 +86,12 @@
         </form>
     </div>
 
-    <div class="customer-container"></div>
+    <div id="customer-container"></div>
   </section><!--===========End main==========-->
 
   <!--page footer-->
   <footer>
-    <div class="social">
-        <a href="mailto:noorsroor67@gmail.com">
-            <i class='bx bxl-gmail bx-sm'></i>
-        </a>          
-        <a href="https://www.linkedin.com/in/noorsroor" target="_blank">
-            <i class='bx bxl-linkedin bx-sm' ></i>
-        </a>
-        <a href="https://github.com/noorsroor" target="_blank">
-            <i class='bx bxl-github bx-sm' ></i>
-        </a>
-        <a href="https://www.behance.net/noorsroorr" target="_blank">
-            <i class='bx bxl-behance bx-sm'></i>
-        </a>
-        <a href="https://wa.me/+962799540485" target="_blank">
-            <i class='bx bxl-whatsapp bx-sm' ></i>
-        </a>          
-    </div>
+    
     <div class="copyright">&copy; 2024 Noor sroor. All Rights Reserved.      </div>
   </footer><!--===========End Footer==========-->
 
